# reya-rust-sdks-monorepo

./: .env_example  .gitignore  Cargo.toml  generate_docs.sh  readme.md
reya-rust-sdk/: Cargo.toml
reya-rust-sdk/src/: config.rs  data_types.rs  http_provider.rs  lib.rs  multicall.rs  solidity.rs
reya-rust-sdk/transactions/abi/: CoreErrors.json  CoreProxy.json  Errors.json  Events.json  Multicall2.json  OracleAdaptersProxy.json  OrderGatewayProxy.json  PassivePerpInstrumentProxy.json  PassivePoolProxy.json
reya-rust-test-app/: Cargo.toml
reya-rust-test-app/src/: batch_order.json  main.rs
src/: main copy.rs  main.rs
src/reya_network/: data_types.rs  http_provider.rs
transactions/abi/: COREPROXY copy.json  COREPROXY.json  CoreProxy.json  CoreProxy.original.json  IWETH9.json  RUSDPROXY.json  SimpleStorage.json  rUsdProxy.json
