[package]
name = "reya-rust-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { git = "https://github.com/alloy-rs/alloy", version = "0.1.0", features = [
    "consensus",
    "contract",
    "eips",
    "kzg",
    "network",
    "node-bindings",
    "provider-http",
    "provider-ipc",
    "provider-ws",
    "providers",
    "rpc-client-ipc",
    "rpc-client-ws",
    "rpc-client",
    "rpc-types",
    "rpc-types-eth",
    "rpc-types-trace",
    "signer-aws",
    "signer-keystore",
    "signer-ledger",
    "signer-mnemonic",
    "signer-trezor",
    "signer-wallet",
    "signer-yubihsm",
    "signers",
    "transport-http",
    "transport-ws",
    "transport-ipc"
] }

alloy-core = { git = "https://github.com/alloy-rs/core", version = "0.7.2"}
# alloy-dyn-abi = { version = "0.7.2", default-features = false }
# alloy-json-abi = { version = "0.7.2", default-features = false }
alloy-primitives = { version = "0.7.2", default-features = false }
alloy-sol-types = { version = "0.7.2", default-features = false }

# URL 
url = "2.5.0"

# hex
hex = "0.4.3"

# async
tokio = { version = "1", features = ["full"] }

# misc
eyre = "0.6.12"

# env
dotenv = "0.15.0"

# tracing
tracing = "0.1.40"

[lints]
workspace = true