[package]
name = "reya-rust-sdk"
version = "0.1.1"
edition = "2021"

[dependencies]

rust_decimal = "1.35"
rust_decimal_macros = "1.34"

## json
serde_json = { version = "1.0"}
serde = { version = "1.0", features = ["derive"] }

alloy-core = { git = "https://github.com/alloy-rs/core"}
alloy = { version = "0.2", features = ["full"] }
alloy-primitives = { version = "0.7", default-features = false }
alloy-sol-types = { version = "0.7", default-features = false }

reqwest = { version = "0.12", default-features = false }
# URL 
url = "2.5.0"

# hex
hex = "0.4.3"

# async
tokio = { version = "1", features = ["full"] }

# misc
eyre = "0.6.12"

# env
dotenv = "0.15.0"


# tracing
tracing = "0.1.40"

# log, define only in root cargo.toml 
log = "0.4"
simple_logger = "5"

[lints]
workspace = true
