[package]
name = "reya-rust-test-app"
version = "0.1.0"
edition = "2021"


[dependencies]
clap = { version = "4.5", features = ["derive"] }
rust_decimal = "1.35"
rust_decimal_macros = "1.34"

reya-rust-sdk = { path = "../reya-rust-sdk" } # from a path in the local filesystem


alloy = { version = "0.1", features = ["full"] }
alloy-sol-types = { version = "0.7.6", default-features = false }


## json
serde_json = { version = "1.0"}
serde = { version = "1.0", features = ["derive"] }


# URL 
url = "2.5.0"

# hex
hex = "0.4.3"

# async
tokio = { version = "1", features = ["full"] }

# futures
#futures = "0.3"
#futures-util = "0.3"

# misc
eyre = "0.6.12"

# env
dotenv = "0.15.0"

# tracing
tracing = "0.1.40"

# log, define only in root cargo.toml 
log = "0.4.6"
simple_logger = "5.0.0"
